# controllers/web/userGameHistoryController.js
@@ -1,48 +1,22 @@
-const { UserGame, UserGameBiodata, UserGameHistory } = require('../../models');
+const { UserGameHistory } = require('../../models');
 
 module.exports = {
     // Endpoint GET /history
     index: async (req, res) => {
         try {
-            const userGamesHistories = await UserGameHistory.findAll({
-                // include: ['userGameBiodata']
-            });
+            const userGamesHistories = await UserGameHistory.findAll();
             const data = userGamesHistories.map(history => 
                 history.toJSON()
             );
-            res.status(200).json({
-                message: 'Success',
-                data: data
+            res.render("layouts/history/index", {
+                title: "Histories",
+                active: "history",
+                data
             })
         } catch (error) {
-            res.status(500).json({
-                message: error.message
-            });
+            res.render("error", { error });
         }
     },
-    // Endpoint GET /history/:id
-    show: async (req, res) => {
-        try {
-            const { id } = req.params;
-            const userGameHistory = await UserGameHistory.findByPk(id);
-            if (!userGameHistory) {
-                return res.status(404).json({
-                    message: 'User Game History not found',
-                    data: null
-                });
-            }
-            res.status(200).json({
-                message: 'Success',
-                data: userGameHistory.toJSON()
-            });
-
-        } catch (error) {
-            res.status(500).json({
-                message: error.message
-            });
-        }
-    },
-    
     
     // Endpoint POST /history
     store: async (req, res) => {
@@ -123,28 +97,22 @@ module.exports = {
                 where: { id : id }
             });
             if (!userGameHistory) {
-                return res.status(404).json({
-                    message: 'User Game History not found',
-                    data: null
-                });
+                req.flash("alertMessageHistory", "User Game History not found");
+                req.flash("alertStatusHistory", "danger");
+                res.redirect('/');
             }
-            res.status(200).json({
-                message: "User Game History deleted"
-            });
-
+            req.flash("alertMessageHistory", "Delete history success!");
+            req.flash("alertStatusHistory", "success");
+            res.redirect('/');
         } catch (error) {
-            if(error.name === 'SequelizeValidationError') {
-                const errors = error.errors.map(err => err.message);
-                res.status(400).json({
-                    message: error.message,
-                    data: null,
-                    error: errors
-                });
+            if (error.name === 'SequelizeValidationError') {
+                req.flash("alertMessageHistory", "Update history failed!");
+                req.flash("alertStatusHistory", "danger");
+                res.redirect('/')
             } else {
-                res.status(500).json({
-                    message: error.message,
-                    data: null,
-                });
+                req.flash("alertMessageHistory", "Internal Server Error!");
+                req.flash("alertStatusHistory", "danger");
+                res.redirect('/')
             }
         }
     }
